--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 </tr>
                 {% endfor %}
             </table>
-            
+            <button id="reset">Reset</button>
             
         </body>
 </html>
