--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,6 @@
                 {% endfor %}
             </table>
             <button id="reset">Reset</button>
-            
+            <p id="endtext"> </p>
         </body>
 </html>
