--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -4,15 +4,27 @@
     margin-top: 20px;
 }
 
+#endtext{
+    text-align: center;
+    font-size: 100px;
+    color:whitesmoke;
+}
+
+body{
+    background-color: rgb(24, 24, 24);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 button{
     width: 100px;
     height: 50px;
     margin: 5px;
     font-size: 16px;
+    
 }
 
 table, td {
-    border: 1px solid black;
+    border: 5px solid white;
 }
 
 table{
@@ -29,3 +41,7 @@ td{
     font-size: 300%;
 }
 
+table {
+    border-collapse: collapse;
+    border-style: hidden;
+  }
