--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
         <head>
-            <title>Table with Buttons</title>
+            <title>impossible tic tac toe</title>
             <link rel="stylesheet" href="static/styles/style.css">
             <script src="static/scripts/script.js"></script>
         </head>
